<resources>
    <string name="app_name">Meu Condominio</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_apartment">Unity</string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Register</string>

    <string name="error_invalid_email">Invailid Email</string>
    <string name="error_invalid_password">Invailid Password!</string>
    <string name="error_incorrect_password">Wrong Password</string>
    <string name="error_field_required">Required field not filled!</string>
    <string name="error_access">Fail on login</string>
    <string name="title_activity_main">Meu Condominio</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="title_poi">Points of Interest</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="registerSuccess">User successfully registered!</string>
    <string name="title_news">News</string>
    <string name="title_providers">Providers</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="AddSuccess">Success in adding registry!</string>
    <string name="deleteSuccess">Success in deleting registry!</string>
    <string name="Publisher">Publisher:</string>
    <string name="UserValid">You can only change news items included by your user!</string>
    <string name="Delete">Delete</string>
    <string name="changeSuccess">Changes saved successfully!</string>
    <string name="Logout">Logout</string>
</resources>
