<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddTitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etDescription"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddDescription" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etPhone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etUnity"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvUnity" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:inputType="textPassword"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btAddNews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="49dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" android:orientation="vertical"/>
    <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="49dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btAddNews" app:layout_constraintHorizontal_bias="1.0"
    />
    <TextView
            android:text="@string/prompt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAddTitle"
            android:layout_marginTop="87dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="@string/prompt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAddDescription"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etTitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="@string/prompt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="@string/prompt_apartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvUnity"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="@string/prompt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPassword"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etUnity" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleNews"
            android:textStyle="bold" android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>