<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etName"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etPhone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etApartment"
            app:layout_constraintTop_toBottomOf="@+id/tvApartment" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btConfirm"
            android:background="@color/colorSalmon"
            android:layout_marginBottom="88dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/etApartment" android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/prompt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
    <TextView
            android:text="@string/prompt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etName" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/prompt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhone"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/prompt_apartment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvApartment"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhone" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" android:textStyle="bold" android:textSize="20sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>