<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.AddNewsActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/field_height"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/etAddTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddTitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btAddNews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="49dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:orientation="vertical" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/etAddDescription"/>
    <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/btCancelAddNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="49dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btAddNews" app:layout_constraintHorizontal_bias="1.0"
    />
    <TextView
            android:text="@string/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAddTitle"
            android:layout_marginTop="87dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="@string/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAddDescription"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etAddTitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:textSize="@dimen/texts"/>
    <TextView
            android:text="Add News"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleNews"
            android:textStyle="bold" android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etAddDescription" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddDescription" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>